FIND_PACKAGE(BISON REQUIRED)
FIND_PACKAGE(FLEX REQUIRED)

BISON_TARGET(blueparse blueparse.y ${CMAKE_CURRENT_BINARY_DIR}/blueparse.tab.c)
FLEX_TARGET(bluelex bluelex.l ${CMAKE_CURRENT_BINARY_DIR}/lex.yy.c)
ADD_FLEX_BISON_DEPENDENCY(bluelex blueparse)

include_directories(${CMAKE_CURRENT_BINARY_DIR})
ADD_LIBRARY(blueconf SHARED blueconf.c ${BISON_blueparse_OUTPUTS} ${FLEX_bluelex_OUTPUTS})

SET(GCC_COVERAGE_COMPILE_FLAGS "-fPIC")
SET( CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )

ADD_LIBRARY(blueconfs STATIC blueconf.c ${BISON_blueparse_OUTPUTS} ${FLEX_bluelex_OUTPUTS})
